基本网络请求封装完成已经。

--- a/flies/build.gradle
+++ b/flies/build.gradle
@@ -27,6 +27,15 @@ dependencies {
   })
   compile 'com.android.support:appcompat-v7:25.3.1'
   testCompile 'junit:junit:4.12'
+
+  compile 'com.google.code.gson:gson:2.7'
+  compile 'com.squareup.okhttp3:okhttp:3.3.0'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+  compile 'com.squareup.retrofit2:retrofit:2.1.0'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+  compile 'io.reactivex:rxjava:1.1.0'
+  compile 'io.reactivex:rxandroid:1.1.0'
+
 }
 
 apply plugin: 'com.android.library'
@@ -35,14 +44,14 @@ ext {
   bintrayRepo = 'maven'
   bintrayName = 'flies'
 
-  publishedGroupId = 'com.inthecheesefactory.thecheeselibrary'
+  publishedGroupId = 'com.lefu8.flies'
   libraryName = 'Flies'
   artifact = 'flies'
 
   libraryDescription = 'A internet frame on Android'
 
-  siteUrl = 'https://github.com/nuuneoi/FBLikeAndroid'
-  gitUrl = 'https://github.com/nuuneoi/FBLikeAndroid.git'
+  siteUrl = 'https://github.com/flyliufu/FliesParent'
+  gitUrl = 'https://github.com/flyliufu/FliesParent.git'
 
   libraryVersion = '0.0.1'
 
