--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,11 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
 }
 
 dependencies {
-  compile project(":flies")
+  compile 'com.lefu8.flies:flies:0.0.2'
   compile fileTree(dir: 'libs', include: ['*.jar'])
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
