--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,15 +17,17 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
-
 }
 
 dependencies {
-  compile 'com.lefu8.flies:flies:0.0.2'
+  compile project(":flies")
+  // compile 'com.lefu8.flies:flies:0.0.3'
   compile fileTree(dir: 'libs', include: ['*.jar'])
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
+  compile 'com.google.code.gson:gson:2.3'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
   compile 'com.android.support:appcompat-v7:25.3.1'
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
   testCompile 'junit:junit:4.12'
