--- a/flies/build.gradle
+++ b/flies/build.gradle
@@ -21,21 +21,18 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  compile 'com.android.support:appcompat-v7:25.3.1'
+  provided 'com.android.support:appcompat-v7:25.3.1'
   testCompile 'junit:junit:4.12'
 
-  compile 'com.google.code.gson:gson:2.7'
+  provided 'com.google.code.gson:gson:2.7'
   compile 'com.squareup.okhttp3:okhttp:3.3.0'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
   compile 'com.squareup.retrofit2:retrofit:2.1.0'
   compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
   compile 'io.reactivex:rxjava:1.1.0'
   compile 'io.reactivex:rxandroid:1.1.0'
-
 }
 
 apply plugin: 'com.android.library'
@@ -53,7 +50,7 @@ ext {
   siteUrl = 'https://github.com/flyliufu/FliesParent'
   gitUrl = 'https://github.com/flyliufu/FliesParent.git'
 
-  libraryVersion = '0.0.2'
+  libraryVersion = '0.0.3'
 
   developerId = 'flyliufu'
   developerName = 'Liu Fu'
