--- a/flies/build.gradle
+++ b/flies/build.gradle
@@ -33,6 +33,8 @@ dependencies {
   compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
   compile 'io.reactivex:rxjava:1.1.0'
   compile 'io.reactivex:rxandroid:1.1.0'
+  // aliyun httpdns
+  compile 'com.aliyun.ams:alicloud-android-httpdns:1.+'
 }
 
 apply plugin: 'com.android.library'
